# Hunspell-iOS

./: README.md
Hunspell/: AppDelegate.h  AppDelegate.mm  Hunspell-Info.plist  Hunspell-Prefix.pch  HunspellBridge.h  HunspellBridge.mm  Makefile.am  Makefile.in  SpellCheckTextFieldDelegate.h  SpellCheckTextFieldDelegate.m  SpellChecker.h  SpellChecker.mm  SpellingSuggestionDelegate.h  SpellingSuggestionDelegate.m  SpellingViewController.h  SpellingViewController.m  SpellingViewController.xib  SuggestionBar.h  SuggestionBar.m  affentry.h  affentry.mm  affixmgr.h  affixmgr.mm  atypes.h  csutil.h  csutil.mm  dictmgr.mm  filemgr.h  filemgr.mm  ga_IE.aff  ga_IE.dic  hashmgr.h  hashmgr.mm  htypes.h  hunspell.dsp  hunspell.h  hunspell.mm  hunzip.mm  main.m  phonet.mm  (+4 more)
Hunspell.xcodeproj/: project.pbxproj
HunspellTests/: HunspellTests-Info.plist  HunspellTests.h  HunspellTests.m
